# rainfall_group22

./: .gitignore  README.md  Work_contract.md  app.py  index.html  pyproject.toml
notebooks/: Milestone2.ipynb  milestone1.html  milestone1.ipynb  rainfall_eda.ipynb  teamwork525.md
notebooks/milestone3/: Milestone3-Task3.html  Milestone3-Task3.ipynb  Milestone3-Task4.html  Milestone3-Task4.ipynb  Milestone3.ipynb
notebooks/milestone4/: Milestone4.html  Milestone4.ipynb  sampleproject.ipynb
src/: __init__.py  download.py  functions.py  sklearn_helper_funcs.py
static/: style.css
templates/: index.html
