[tool.poetry]
name = "rainfall_group22"
version = "0.1.0"
description = ""
authors = ["Jayme Gordon <jaymegordo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
