[tool.poetry]
name = "rainfall_group22"
version = "0.1.0"
description = ""
authors = ["Jayme Gordon <jaymegordo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
requests = "^2.25.1"
tqdm = "^4.59.0"
nicenumber = "^0.2.7"
memory-profiler = "^0.58.0"
rpy2 = "^3.4.3"
dask = "^2021.4.0"
pyarrow = "^3.0.0"
rpy2-arrow = "^0.0.3"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"